# phipilot

./: .gitignore  README.md  nohup.out  pyproject.toml
copilot_api/: app.py  index.html  main.py
scripts/: start-ngrok.sh  start-poetry.sh  start-remote.sh  stop-remote.sh
